--- a/calculadora.html
+++ b/calculadora.html
@@ -18,7 +18,7 @@
                         <td><button class="botao" onclick="limpar()">C</button></td>
                         <td><button class="botao" onclick="apagar()">Del</button></td>
                         <td><button class="botao" onclick="insert('/')">/</button></td>
-                        <td><button class="botao" onclick="insert('X')">x</button></td>
+                        <td><button class="botao" onclick="insert('*')">X</button></td>
                     </tr>
                     <tr>
                         <td><button class="botao" onclick="insert('7')">7</button></td>
