--- a/calculadora.html
+++ b/calculadora.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <div class="fundo">
-        <h1>Lucas Simões</h1>
+        <h1>Feito por Lucas Simões</h1>
+        <h2>Acesse o meu <a href="https://www.linkedin.com/in/lucas-sim%C3%B5es-7b8862187/">LinkedIn</a> e o meu <a href="https://github.com/LucasAbreu16">GitHub</a>.</h2>
             <div class="calculadora">
                 <h1>Calculadora</h1>
                 <p id="resultado"></p>
@@ -36,10 +37,10 @@
                         <td><button class="botao" onclick="insert('1')">1</button></td>
                         <td><button class="botao" onclick="insert('2')">2</button></td>
                         <td><button class="botao" onclick="insert('3')">3</button></td>
-                        <td rowspan="2"><button class="botao" style="height: 106px;" onclick="calcular()">=</button></td>
+                        <td rowspan="2"><button class="botao" style="height: 159px;" onclick="calcular()">=</button></td>
                     </tr>
                     <tr>
-                        <td colspan="2"><button class="botao" style="width: 106px;"  onclick="insert('0')">0</button></td>
+                        <td colspan="2"><button class="botao" style="width: 159px;"  onclick="insert('0')">0</button></td>
                         <td><button class="botao" onclick="insert('.')">.</button></td>
                     </tr>
                 </table>
