--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="fundo">
         <h1>Feito por Lucas Simões</h1>
-        <h2>Acesse o meu <a href="https://www.linkedin.com/in/lucas-sim%C3%B5es-7b8862187/">LinkedIn</a> e o meu <a href="https://github.com/LucasAbreu16">GitHub</a>.</h2>
+        <h2>Acesse o meu <a href="https://www.linkedin.com/in/lucas-sim%C3%B5es-7b8862187/" target="_blank">LinkedIn</a> e o meu <a href="https://github.com/LucasAbreu16" target="_blank">GitHub</a>.</h2>
             <div class="calculadora">
                 <h1>Calculadora</h1>
                 <p id="resultado"></p>
